--- a/Divstack.Company.Estimation.Tool.Users.Infrastructure/Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj
+++ b/Divstack.Company.Estimation.Tool.Users.Infrastructure/Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj
@@ -6,6 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>Divstack.Company.Estimation.Tool.Shared.Testing.IntegrationTests</_Parameter1>
+        </AssemblyAttribute>
       <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=3.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
         <HintPath>..\..\..\..\..\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\3.1.8\ref\netcoreapp3.1\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
       </Reference>
