--- a/Divstack.Company.Estimation.Tool.Products.DAL/Divstack.Company.Estimation.Tool.Products.DAL.csproj
+++ b/Divstack.Company.Estimation.Tool.Products.DAL/Divstack.Company.Estimation.Tool.Products.DAL.csproj
@@ -6,6 +6,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>Divstack.Company.Estimation.Tool.Products.IntegrationsTests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
         <PrivateAssets>all</PrivateAssets>
