--- a/Divstack.Company.Estimation.Tool.Products.IntegrationsTests/Divstack.Company.Estimation.Tool.Products.IntegrationsTests.csproj
+++ b/Divstack.Company.Estimation.Tool.Products.IntegrationsTests/Divstack.Company.Estimation.Tool.Products.IntegrationsTests.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Bogus" Version="33.0.2" />
       <PackageReference Include="FluentAssertions" Version="5.10.3" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.11" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
