[Api][Estimations][Logic] - added estimations logic and test project

--- a/Divstack.Company.Estimation.Tool.Estimations.Domain/Divstack.Company.Estimation.Tool.Estimations.Domain.csproj
+++ b/Divstack.Company.Estimation.Tool.Estimations.Domain/Divstack.Company.Estimation.Tool.Estimations.Domain.csproj
@@ -4,4 +4,13 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks.csproj" />
+      <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Shared.DDD.ValueObjects\Divstack.Company.Estimation.Tool.Shared.DDD.ValueObjects.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="ValueOf" Version="1.0.17" />
+    </ItemGroup>
+
 </Project>
