[Api][Estimations][Logic] - added estimations appliaction layer Api and Domain Test - added peristance configuration

--- a/Divstack.Company.Estimation.Tool.Estimations.Domain/Divstack.Company.Estimation.Tool.Estimations.Domain.csproj
+++ b/Divstack.Company.Estimation.Tool.Estimations.Domain/Divstack.Company.Estimation.Tool.Estimations.Domain.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Products.Core\Divstack.Company.Estimation.Tool.Products.Core.csproj" />
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks.csproj" />
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Shared.DDD.ValueObjects\Divstack.Company.Estimation.Tool.Shared.DDD.ValueObjects.csproj" />
     </ItemGroup>
