--- a/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -9,7 +9,8 @@
   "ConnectionStrings": {
     "Users": "Server=(localdb)\\mssqllocaldb;Database=MasterDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;",
     "Products": "Server=(localdb)\\mssqllocaldb;Database=MasterDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;",
-    "Carts": "Server=(localdb)\\mssqllocaldb;Database=MasterDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;"
+    "Carts": "Server=(localdb)\\mssqllocaldb;Database=MasterDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;",
+    "Estimations": "Server=(localdb)\\mssqllocaldb;Database=MasterDatabase;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;"
 
   },
   "TokenConfiguration": {
