[Frontend][AdminPanel] - extract base api url

--- a/ClientApp/.env.production
+++ b/ClientApp/.env.production
@@ -13,3 +13,6 @@ VUE_APP_STORAGEBUCKET=
 VUE_APP_MESSAGINGSENDERID=
 VUE_APP_APPId=
 VUE_APP_MEASUREMENTID=
+
+
+API_BASE_URL=https://localhost:5001/api
