--- a/ClientApp/.env
+++ b/ClientApp/.env
@@ -13,3 +13,5 @@ VUE_APP_STORAGEBUCKET=
 VUE_APP_MESSAGINGSENDERID=
 VUE_APP_APPId=
 VUE_APP_MEASUREMENTID=
+
+API_BASE_URL=https://localhost:5001/api
