[Api][Valuations][ListView] - added view

--- a/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -10,7 +10,7 @@
     "Users": "Server=(localdb)\\mssqllocaldb;Database=EstimationToolDb;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;",
     "Services": "Server=(localdb)\\mssqllocaldb;Database=EstimationToolDb;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;",
     "Carts": "Server=(localdb)\\mssqllocaldb;Database=EstimationToolDb;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;",
-    "Estimations": "Server=(localdb)\\mssqllocaldb;Database=EstimationToolDb;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;"
+    "Valuations": "Server=(localdb)\\mssqllocaldb;Database=EstimationToolDb;Trusted_Connection=True;MultipleActiveResultSets=true;Application Name=DivstackTool;"
   },
   "TokenConfiguration": {
     "Secret": "3wsx$EDC5rfvAilleron",
