[Frontend][API] - handle rest

--- a/ClientApp/.env
+++ b/ClientApp/.env
@@ -1,4 +1,4 @@
-VUE_APP_URL=http://localhost:8080
+VUE_APP_URL=https://localhost:8080
 
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
@@ -14,4 +14,4 @@ VUE_APP_MESSAGINGSENDERID=
 VUE_APP_APPId=
 VUE_APP_MEASUREMENTID=
 
-API_BASE_URL=https://localhost:5001/api
+VUE_APP_BASE_URL = https://localhost:5001/api
