--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -38,6 +38,7 @@
     "v-mask": "^2.2.3",
     "vue": "^2.6.12",
     "vue-apexcharts": "^1.6.0",
+    "vue-axios": "^3.2.4",
     "vue-carousel": "^0.18.0",
     "vue-chartist": "^2.3.1",
     "vue-chartjs": "^3.5.1",
