--- a/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Integrations.Trello/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Integrations.Trello.csproj
+++ b/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Integrations.Trello/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Integrations.Trello.csproj
@@ -8,6 +8,7 @@
       <PackageReference Include="Manatee.Trello" Version="4.4.0" />
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     </ItemGroup>
@@ -16,10 +17,5 @@
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Domain\Divstack.Company.Estimation.Tool.Valuations.Domain.csproj" />
     </ItemGroup>
 
-    <ItemGroup>
-      <Reference Include="Microsoft.AspNetCore.Http.Abstractions, Version=5.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
-        <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\5.0.6\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-      </Reference>
-    </ItemGroup>
 
 </Project>
