--- a/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
+++ b/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
@@ -10,6 +10,10 @@
       <PackageReference Include="Moq" Version="4.16.1" />
       <PackageReference Include="xunit" Version="2.4.1" />
       <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
