[CI][Travis] - fixed connection strings

--- a/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/appsettings.json
+++ b/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/appsettings.json
@@ -7,10 +7,10 @@
         }
     },
     "ConnectionStrings": {
-        "Users": "Server=localhost;Port=3306;Database=divstack_estimatetool-test;Uid=root;Pwd=;",
-        "Services": "Server=localhost;Port=3306;Database=divstack_estimatetool-test;Uid=root;Pwd=;",
-        "Carts": "Server=localhost;Port=3306;Database=divstack_estimatetool-test;Uid=root;Pwd=;",
-        "Valuations": "Server=localhost;Port=3306;Database=divstack_estimatetool-test;Uid=root;Pwd=;"
+        "Users": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool-test;Uid=divstack_estimatetool;Pwd=IBi2q6JB7)wm--YQ;",
+        "Services": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool-test;Uid=divstack_estimatetool;Pwd=IBi2q6JB7)wm--YQ;",
+        "Carts": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool-test;Uid=divstack_estimatetool;Pwd=IBi2q6JB7)wm--YQ;",
+        "Valuations": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool-test;Uid=divstack_estimatetool;Pwd=IBi2q6JB7)wm--YQ;"
     },
     "Integrations":
     {
