--- a/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
+++ b/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
@@ -8,12 +8,8 @@
       <PackageReference Include="FluentAssertions" Version="5.10.3" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
       <PackageReference Include="Moq" Version="4.16.1" />
-      <PackageReference Include="xunit" Version="2.4.1" />
-      <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
-      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
+        <PackageReference Include="NUnit" Version="3.13.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     </ItemGroup>
 
     <ItemGroup>
