--- a/Divstack.Company.Estimation.Tool.Valuations.Persistance/Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj
+++ b/Divstack.Company.Estimation.Tool.Valuations.Persistance/Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj
@@ -27,6 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Shared.Infrastructure.Mysql\Divstack.Company.Estimation.Tool.Shared.Infrastructure.Mysql.csproj" />
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Application\Divstack.Company.Estimation.Tool.Valuations.Application.csproj" />
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Domain\Divstack.Company.Estimation.Tool.Valuations.Domain.csproj" />
     </ItemGroup>
