[Security][RemovedSensiveData] - moved confiugraiton to env variables and user secrets

--- a/Divstack.Company.Estimation.Tool.Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper.csproj
+++ b/Divstack.Company.Estimation.Tool.Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <LangVersion>9</LangVersion>
+        <UserSecretsId>b7c336cb-ae81-4dd5-a4d6-6eb22bbadc75</UserSecretsId>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
