--- a/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.Development.json
+++ b/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.Development.json
@@ -7,13 +7,13 @@
     }
   },
   "ConnectionStrings": {
-    "Users": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool;Uid=divstack_estimatetool;Pwd=IBi2q6JB7)wm--YQ;",
-    "Services": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool;Uid=divstack_estimatetool;Pwd=IBi2q6JB7)wm--YQ;",
-    "Carts": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool;Uid=divstack_estimatetool;Pwd=IBi2q6JB7)wm--YQ;",
-    "Valuations": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool;Uid=divstack_estimatetool;Pwd=IBi2q6JB7)wm--YQ;"
+    "Users": "",
+    "Services": "",
+    "Carts": "",
+    "Valuations": ""
   },
   "TokenConfiguration": {
-    "Secret": "3wsx$EDC5rfvEstimationTool",
+    "Secret": "",
     "Issuer": "localhost:5001",
     "Audience": "DeveloperAudience",
     "AccessExpirationInMinutes": 1000000,
@@ -45,8 +45,8 @@
     "ServerAddress": "smtp.mailtrap.io",
     "ServerPort": 25,
     "MailFrom": "no-reply@estimation-tool.com",
-    "ServerLogin": "eb076a65a09060",
-    "ServerPassword": "9bc1c33fd74be1"
+    "ServerLogin": "",
+    "ServerPassword": ""
   },
   "ConfirmAccountMailConfiguration": {
     "Format": "Visit <a href=\"https://localhost:5001/auth/confirm-account/{userId}/{token}\">here</a> to confirm your account and set password"
