[CI][Travis][Heroku]

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ deploy:
   provider: heroku
   api_key: c1a24ea2-57c9-4a99-80b1-498b767346cd
   app: estimation-tool-kb
+  on:
+    branch: develop
