[Valuations][Reminders] - added hangfire - schedule emails - add deadlines

--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -46,8 +46,16 @@
     "ServerAddress": "smtp.mailtrap.io",
     "ServerPort": 25,
     "MailFrom": "no-reply@estimation-tool.com",
+    "DisableSsl": "false",
     "ServerLogin": "",
     "ServerPassword": ""
+  },
+  "Valuation":
+  {
+    "Deadline":
+    {
+      "WorksDaysToDeadlineFromNow": 3
+    }
   },
   "ConfirmAccountMailConfiguration": {
     "Format": "Visit <a href=\"https://localhost:5001/auth/confirm-account/{userId}/{token}\">here</a> to confirm your account and set password"
@@ -69,5 +77,9 @@
     "Subject": "Proposal Approved",
     "PathToTemplate": "Proposals/Templates/valuation_proposal_approved_mail.html",
     "ApprovedProposalLink": "http://localhost:8080/valuations/{ProposalId}"
+  },
+  "ValuationCloseToDeadlineMailConfiguration": {
+    "Subject": "Valuation close to Deadline !!!",
+    "PathToTemplate": "DeadlineClose/Templates/valuation_close_to_deadline_mail.html"
   }
 }
