--- a/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails.Core/Divstack.Company.Estimation.Tool.Emails.Core.csproj
+++ b/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails.Core/Divstack.Company.Estimation.Tool.Emails.Core.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Shared\Abstractions\Divstack.Company.Estimation.Tool.Shared.Abstractions\Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj" />
+      <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks.csproj" />
     </ItemGroup>
 
 </Project>
