--- a/Src/Shared/Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj
+++ b/Src/Shared/Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions/Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Hangfire.Core" Version="1.7.24" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     </ItemGroup>
 
