[Reminders][Cancellation] - ability to cancel valuation deadline close reminders

--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -54,7 +54,14 @@
   {
     "Deadline":
     {
-      "WorksDaysToDeadlineFromNow": 3
+      "WorksDaysToDeadlineFromNow": 5
+    }
+  },
+  "Reminders":
+  {
+    "Valuation":
+    {
+      "DaysBeforeDeadline": 2
     }
   },
   "ConfirmAccountMailConfiguration": {
