--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain/Divstack.Company.Estimation.Tool.Valuations.Domain.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain/Divstack.Company.Estimation.Tool.Valuations.Domain.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Ardalis.GuardClauses" Version="3.2.0" />
       <PackageReference Include="ValueOf" Version="1.0.17" />
     </ItemGroup>
 
