--- a/Src/Modules/Reminders/Divstack.Company.Estimation.Tool.Reminders.Valuations/Divstack.Company.Estimation.Tool.Reminders.Valuations.csproj
+++ b/Src/Modules/Reminders/Divstack.Company.Estimation.Tool.Reminders.Valuations/Divstack.Company.Estimation.Tool.Reminders.Valuations.csproj
@@ -7,6 +7,8 @@
     <ItemGroup>
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+
     </ItemGroup>
 
     <ItemGroup>
