--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Valuations Domain Tests
         uses: zyborg/dotnet-tests-report@v1
         with:
-          project_path: Src
+          project_path: .\
           report_name: valuations_domain_project_tests
           report_title: Valuations Domain Tests
           github_token: ${{ secrets.GITHUB_TOKEN }}
