--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: test
+        run: ls
       - name: Valuations Domain Tests
         uses: zyborg/dotnet-tests-report@v1
         with:
           report_name: valuations_domain_project_tests
           report_title: Valuations Domain Tests
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          project_path: ./Divstack.Company.Estimation.Tool.sln
+
