--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,6 @@ jobs:
           report_name: valuations_domain_project_tests
           report_title: Valuations Domain Tests
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          project_path: ./Divstack.Company.Estimation.Tool.sln
+          project_path: /home/runner/work/Estimation-Tool/Estimation-Tool/home/runner/wo
+rk/Estimation-Tool/Estimation-Tool/Divstack.Company.Estimation.Tool.sln
 
