--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Persistance/Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Persistance/Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj
@@ -34,4 +34,8 @@
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Domain\Divstack.Company.Estimation.Tool.Valuations.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
