--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Snov/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Snov.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Snov/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Snov.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+        <PackageReference Include="Scrutor" Version="3.3.0" />
     </ItemGroup>
 
 </Project>
