--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Infrastructure/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Infrastructure/Divstack.Company.Estimation.Tool.Valuations.Infrastructure.csproj
@@ -21,7 +21,9 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Application\Divstack.Company.Estimation.Tool.Valuations.Application.csproj" />
+      <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Snov\Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Snov.csproj" />
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Trello\Divstack.Company.Estimation.Tool.Valuations.Infrastructure.Trello.csproj" />
+      <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents\Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents.csproj" />
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Persistance\Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj" />
     </ItemGroup>
 
