--- a/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Persistance/Divstack.Company.Estimation.Tool.Users.Persistance.csproj
+++ b/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Persistance/Divstack.Company.Estimation.Tool.Users.Persistance.csproj
@@ -10,10 +10,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.7" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
