[Configurations] - split configurations to modules

--- a/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails.Users/Divstack.Company.Estimation.Tool.Emails.Users.csproj
+++ b/Src/Modules/Emails/Divstack.Company.Estimation.Tool.Emails.Users/Divstack.Company.Estimation.Tool.Emails.Users.csproj
@@ -20,4 +20,10 @@
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Emails.Core\Divstack.Company.Estimation.Tool.Emails.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="emails-users-appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
