--- a/Src/Modules/Reminders/Divstack.Company.Estimation.Tool.Reminders.Valuations/Divstack.Company.Estimation.Tool.Reminders.Valuations.csproj
+++ b/Src/Modules/Reminders/Divstack.Company.Estimation.Tool.Reminders.Valuations/Divstack.Company.Estimation.Tool.Reminders.Valuations.csproj
@@ -16,4 +16,10 @@
       <ProjectReference Include="..\..\Valuations\Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents\Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="reminders-valuations-appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
