--- a/Src/Modules/Services/Divstack.Company.Estimation.Tool.Services.Api/Divstack.Company.Estimation.Tool.Services.Api.csproj
+++ b/Src/Modules/Services/Divstack.Company.Estimation.Tool.Services.Api/Divstack.Company.Estimation.Tool.Services.Api.csproj
@@ -16,4 +16,10 @@
       <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Services.DAL\Divstack.Company.Estimation.Tool.Services.DAL.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="services-appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
