--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/appsettings.json
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/appsettings.json
@@ -1,54 +1,50 @@
 ﻿{
-    "ConnectionStrings": {
-        "Valuations": ""
-    },
-    "Integrations":
-    {
-        "Trello":
-        {
-            "BoardId": "",
-            "AppKey": "",
-            "UserToken": ""
-        }
-    },
-    "TokenConfiguration": {
-        "Secret": "",
-        "Issuer": "localhost:5001",
-        "Audience": "DeveloperAudience",
-        "AccessExpirationInMinutes": 10000000,
-        "RefreshExpirationInMinutes": 100000,
-        "LinksExpirationInMinutes": 15
-    },
-    "Users":
-    {
-        "PasswordExpirationFrequency": 30
-    },
-    "AdminAccount":
-    {
-        "UserName": "admin@divstack.pl",
-        "Email": "admin@divstack.pl",
-        "Password": "3wsx$EDC5rfvtest4",
-        "Init": "true"
-    },
-    "DateFormat": "f",
-    "AllowedHosts": "*",
-    "Mail": {
-        "ServerAddress": "127.0.0.1",
-        "ServerPort": 25,
-        "MailFrom": "no-reply@estimation-tool.com",
-        "ServerLogin": "",
-        "ServerPassword": "",
-        "DisableSsl": "true"
-    },
-    "SuggestValuationMailConfiguration": {
-        "Subject": "ProposalSuggest",
-        "PathToTemplate": "Proposals/Templates/valuation_proposal_suggested_mail.html",
-        "RejectProposalLink": "https://localhost:5001/api/valuations-module/Valuations/valuations/proposals/reject?ProposalId={ProposalId}&ValuationId={ValuationId}",
-        "AcceptProposalLink": "https://localhost:5001/api/valuations-module/Valuations/valuations/proposals/approve?ProposalId={ProposalId}&ValuationId={ValuationId}"
-    },
-    "ValuationProposalApprovedMailConfiguration": {
-        "Subject": "Proposal Approved",
-        "PathToTemplate": "Proposals/Templates/valuation_proposal_approved_mail.html",
-        "ApprovedProposalLink": "http://localhost:8080/valuations/{ProposalId}"
+  "ConnectionStrings": {
+    "Valuations": ""
+  },
+  "Integrations": {
+    "Trello": {
+      "BoardId": "",
+      "AppKey": "",
+      "UserToken": ""
     }
+  },
+  "TokenConfiguration": {
+    "Secret": "",
+    "Issuer": "localhost:5001",
+    "Audience": "DeveloperAudience",
+    "AccessExpirationInMinutes": 10000000,
+    "RefreshExpirationInMinutes": 100000,
+    "LinksExpirationInMinutes": 15
+  },
+  "Users": {
+    "PasswordExpirationFrequency": 30
+  },
+  "AdminAccount": {
+    "UserName": "admin@divstack.pl",
+    "Email": "admin@divstack.pl",
+    "Password": "3wsx$EDC5rfvtest4",
+    "Init": "true"
+  },
+  "DateFormat": "f",
+  "AllowedHosts": "*",
+  "Mail": {
+    "ServerAddress": "127.0.0.1",
+    "ServerPort": 25,
+    "MailFrom": "no-reply@estimation-tool.com",
+    "ServerLogin": "",
+    "ServerPassword": "",
+    "DisableSsl": "true"
+  },
+  "SuggestValuationMailConfiguration": {
+    "Subject": "ProposalSuggest",
+    "PathToTemplate": "Proposals/Templates/valuation_proposal_suggested_mail.html",
+    "RejectProposalLink": "https://localhost:5001/api/valuations-module/Valuations/valuations/proposals/reject?ProposalId={ProposalId}&ValuationId={ValuationId}",
+    "AcceptProposalLink": "https://localhost:5001/api/valuations-module/Valuations/valuations/proposals/approve?ProposalId={ProposalId}&ValuationId={ValuationId}"
+  },
+  "ValuationProposalApprovedMailConfiguration": {
+    "Subject": "Proposal Approved",
+    "PathToTemplate": "Proposals/Templates/valuation_proposal_approved_mail.html",
+    "ApprovedProposalLink": "http://localhost:8080/valuations/{ProposalId}"
+  }
 }
