--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper.csproj
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <LangVersion>9</LangVersion>
         <UserSecretsId>b7c336cb-ae81-4dd5-a4d6-6eb22bbadc75</UserSecretsId>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
