--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/valuations-appsettings.json
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/valuations-appsettings.json
@@ -12,6 +12,6 @@
     }
   },
   "ConnectionStrings": {
-    "Valuations": "Server=195.78.66.133;Port=3306;Database=divstack_estimatetool;Uid=divstack_estimatetool;Pwd=5-irVNazMm1QPiG-;"
+    "Valuations": ""
   }
 }
