--- a/Src/Modules/Inquiries/Tests/Divstack.Company.Estimation.Tool.Inquiries.IntegrationTests/Divstack.Company.Estimation.Tool.Inquiries.IntegrationTests.csproj
+++ b/Src/Modules/Inquiries/Tests/Divstack.Company.Estimation.Tool.Inquiries.IntegrationTests/Divstack.Company.Estimation.Tool.Inquiries.IntegrationTests.csproj
@@ -2,9 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>Divstack.Company.Estimation.Tool.Valuations.Application.Tests</RootNamespace>
         <UserSecretsId>b7c336cb-ae81-4dd5-a4d6-6eb22bbadc75</UserSecretsId>
     </PropertyGroup>
+
+    <ItemGroup>
+      <None Update="inquiries-module-integration-tests.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Faker.Net" Version="1.5.138" />
@@ -13,6 +18,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
         <PackageReference Include="Moq" Version="4.16.1" />
+        <PackageReference Include="MySqlConnector" Version="1.3.7" />
         <PackageReference Include="netDumbster" Version="2.0.0.8" />
         <PackageReference Include="NUnit" Version="3.13.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
@@ -20,15 +26,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Update="appsettings.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\..\..\Bootstrapper\Divstack.Company.Estimation.Tool.Bootstrapper\Divstack.Company.Estimation.Tool.Bootstrapper.csproj" />
-        <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.IntegrationTesting\Divstack.Company.Estimation.Tool.Shared.IntegrationTesting.csproj" />
-        <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Application\Divstack.Company.Estimation.Tool.Valuations.Application.csproj" />
+      <ProjectReference Include="..\..\..\..\Bootstrapper\Divstack.Company.Estimation.Tool.Bootstrapper\Divstack.Company.Estimation.Tool.Bootstrapper.csproj" />
+      <ProjectReference Include="..\..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.IntegrationTesting\Divstack.Company.Estimation.Tool.Shared.IntegrationTesting.csproj" />
+      <ProjectReference Include="..\..\..\Valuations\Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests\Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests.csproj" />
     </ItemGroup>
 
 </Project>
