--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests/Divstack.Company.Estimation.Tool.Valuations.Application.IntegrationTests.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0"/>
+        <PackageReference Include="Mongo2Go" Version="3.1.3"/>
         <PackageReference Include="Moq" Version="4.16.1"/>
         <PackageReference Include="netDumbster" Version="2.0.0.8"/>
         <PackageReference Include="NUnit" Version="3.13.2"/>
